@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- 
-Philio: PSP05-D PIR/Motion Outdoor 
+Philio: PSP05 PIR/Motion for version B, C and D
 http://products.z-wavealliance.org/products/2002
 http://products.z-wavealliance.org/ProductManual/File?folder=&filename=Manuals/2002/PSP05_manual.pdf
 -->
