@@ -179,6 +179,8 @@ Version 1.5
  - Add MCOHome Thermostat fan coil MH8-FC-EU (Nechry)
  - Add Fibaro FGDW002 Door Opening Sensor 2 (Nechry)
  - Add Qubino ZMNHTDx Smart meter Z-Wave+ config for version 1 to 3 and 4 to 6, assume new device as 4 to 6 (Nechry)
+ - Add Devolo devices (Nechry)
+ - Pull Request #1224 - Add Philio PSP05-D Motionsensor from superjunky (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
